# settl

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  LAST_DEPLOY.md  Makefile  README.md  SCHEMA.md  TASKS.md  demo.py  demo_judgment.py  pyproject.toml  send_live.py  settl_study_guide.md
.github/workflows/: deploy.yml  pr-checks.yml
docs/: VOICE_AGENT_SPEC.md
evals/: README.md  run_evals.py
src/settl/: __init__.py  config.py
src/settl/adapters/: __init__.py  csv_adapter.py  manual_entry.py
src/settl/agents/: __init__.py
src/settl/api/: __init__.py  engine_factories.py  identity.py  inbound_mail_board.py  inbound_poll_scheduler.py  internal_auth.py  main.py  metrics.py  oauth_google.py  oauth_routes.py  payment_plan_board.py  payment_plan_routes.py  poll_routes.py  reconcile_ops.py  schemas.py  state.py  tenant_config_routes.py
src/settl/audit/: __init__.py  agent_engine.py  execution_log.py  export.py  sink.py
src/settl/compliance/: __init__.py  gate.py  patterns.py  rules.py
src/settl/data/: __init__.py  loader.py  synthetic_invoices.json  synthetic_tenants.json  tenants.py
src/settl/gmail/: __init__.py  client.py  mcp_client.py  mcp_server.py  messages.py
src/settl/governance/: __init__.py  apply.py  rules.py  store.py
src/settl/orchestrator/: __init__.py  loop.py  payment_plan.py  pipeline.py  result.py  runtime.py  tenanted.py  trace.py
src/settl/payments/: __init__.py  currency.py  stripe_links.py  webhook.py
src/settl/schema/: __init__.py  invoice.py  validation.py
src/settl/security/: __init__.py  token_crypto.py
src/settl/sending/: __init__.py  base.py  email_sender.py  mock_sender.py
src/settl/tenancy/: __init__.py  config.py
supabase/migrations/: 20260713000001_tenants.sql  20260713000002_invoices.sql  20260713000003_contacts.sql  20260713000004_tenant_config.sql  20260713000005_oauth_tokens.sql  20260713000006_operator_rules.sql  20260713000007_execution_log.sql  20260713000008_payment_events.sql  20260713000009_rls_lockdown.sql  20260713000010_invoice_source_manual.sql  20260713000011_payment_plans.sql  20260713000012_payment_plans_rls.sql  20260713000013_payment_plan_negotiation.sql
tests/: conftest.py  test_agent_engine.py  test_api.py  test_compliance_gate.py  test_csv_adapter.py  test_decision_core.py  test_drafting.py  test_engine_factories.py  test_execution_log.py  test_gate_redteam.py  test_gmail.py  test_gmail_mcp_server.py  test_governance.py  test_identity.py  test_inbound.py  test_inbound_mail_board.py  test_inbound_model.py  test_inbound_poll_scheduler.py  test_judgment.py  test_manual_entry.py  test_multitenancy.py  test_oauth_google.py  test_oauth_routes.py  test_orchestrator.py  test_payment_plan.py  test_payment_plan_board.py  test_payment_plan_routes.py  test_reconcile.py  test_schema.py  test_senders.py  test_strategy.py  test_stripe_links.py  test_tenancy.py  test_tenant_config.py  test_token_crypto.py  test_voice.py  test_voice_hooks.py  test_voice_live.py  test_voice_loop.py  test_voice_tts.py  (+1 more)
web/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json
web/src/: middleware.ts
(+164 files in other folders)
