[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "settl"
version = "0.1.0"
description = "Settl - autonomous outreach & recovery engine (decision core)"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
gemini = ["google-genai>=1.0"]
stripe = ["stripe>=9.0"]
db = ["psycopg[binary]>=3.1"]
gmail = [
    "mcp[cli]>=1.0,<2.0",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "cryptography>=42.0",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
